SIP-3881: Fixed spacing issues and label on role and user dialogs.

--- a/saw-web/src/main/javascript/app/common/base-dialog/base-dialog.component.scss
+++ b/saw-web/src/main/javascript/app/common/base-dialog/base-dialog.component.scss
@@ -2,11 +2,11 @@
 
 .base-dialog {
   display: block;
-  padding: 10px;
+  margin: -5px;
   color: $primary-grey-g4;
 
   .base-dialog__header {
-    padding: 10px;
+    padding: 0 0 10px;
     border-bottom: 1px solid $primary-grey-g2;
 
     strong {
