--- a/saw-web/src/main/javascript/app/modules/analyze/publish/dialog/analyze-publish/analyze-publish-dialog.component.scss
+++ b/saw-web/src/main/javascript/app/modules/analyze/publish/dialog/analyze-publish/analyze-publish-dialog.component.scss
@@ -3,10 +3,7 @@
 analyze-publish-dialog {
   .dialog__content {
     width: 700px;
-    padding: 0 10px;
-    min-width: 500px;
     max-height: 500px;
-    overflow-y: auto;
 
     .label-inline-with-select {
       text-align: center;
