--- a/saw-web/src/main/javascript/app/modules/analyze/publish/dialog/analyze-schedule/analyze-schedule-dialog.component.scss
+++ b/saw-web/src/main/javascript/app/modules/analyze/publish/dialog/analyze-schedule/analyze-schedule-dialog.component.scss
@@ -11,21 +11,9 @@ analyze-schedule-dialog {
   padding: 10px;
   color: $primary-grey-g4;
 
-  .dialog__header {
-    padding: 10px;
-    border-bottom: 1px solid $primary-grey-g2;
-
-    strong {
-      font-size: 20px;
-    }
-  }
-
   .dialog__content {
     width: 700px;
-    padding: 0 10px;
-    min-width: 500px;
     max-height: 500px;
-    overflow-y: auto;
 
     .label-inline-with-select {
       text-align: center;
@@ -110,9 +98,6 @@ analyze-schedule-dialog {
   }
 
   .dialog__actions {
-    padding-top: 10px;
-    border-top: 1px solid $primary-grey-g2;
-
     .form-buttons button {
       margin-right: 10px;
     }
